# rust-eventsource-client

./: Cargo.toml
eventsource-client/: Cargo.toml
eventsource-client/src/: error.rs  event_parser.rs  lib.rs
