[package]
name = "eventsource-client"
version = "0.14.0"
description = "Client for the Server-Sent Events protocol (aka EventSource)"
repository = "https://github.com/launchdarkly/rust-eventsource-client"
authors = ["LaunchDarkly"]
edition = "2021"
license = "Apache-2.0"
keywords = ["launchdarkly", "feature-flags", "feature-toggles", "eventsource", "server-sent-events"]
exclude = ["CHANGELOG.md"]

[dependencies]
log = "0.4.6"
pin-project = "1.0.10"
